@@ -28,7 +28,9 @@
 
 /* for systems that need to override reading of environment variables */
 void _php_import_environment_variables(zval *array_ptr);
+void _php_load_environment_variables(zval *array_ptr);
 PHPAPI void (*php_import_environment_variables)(zval *array_ptr) = _php_import_environment_variables;
+PHPAPI void (*php_load_environment_variables)(zval *array_ptr) = _php_load_environment_variables;
 
 PHPAPI void php_register_variable(const char *var, const char *strval, zval *track_vars_array)
 {
@@ -630,6 +632,11 @@ void _php_import_environment_variables(zval *array_ptr)
 #endif
 
 	tsrm_env_unlock();
+}
+
+void _php_load_environment_variables(zval *array_ptr)
+{
+	php_import_environment_variables(array_ptr);
 }
 
 bool php_std_auto_global_callback(char *name, uint32_t name_len)
