@@ -9,6 +9,10 @@ PHP                                                                        NEWS
 - Curl:
   . Fix failing tests due to string changes in libcurl 8.6.0. (Ayesh)
 
+- FPM:
+  . Fixed bug #75712 (getenv in php-fpm should not read $_ENV, $_SERVER).
+    (Jakub Zelenka)
+
 15 Feb 2024, PHP 8.2.16
 
 - Core:
